[package]
name = "sonic_spin"
version = "0.1.0"
authors = ["Thiago <swfsql@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "=0.15.30", features = ["full", "printing"] } 
proc-macro2 = { version = "0.4.4", default-features = false }
quote = "0.6.11"

[patch.crates-io.syn]
git = "https://github.com/swfsql/syn.git"
branch = "pub-items" 

[features]
full = [] 
derive = []
parsing = []
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
printing = []
default = ["full", "derive", "parsing", "clone-impls", "printing"]

