[package]
name = "sonic_spin"
version = "0.1.0"
authors = ["Thiago <swfsql@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Reads ::() as a general postfix operator"
repository = "https://github.com/swfsql/sonic-spin"
keywords = ["postfix"]
readme = "README.md"
documentation = "https://docs.rs/sonic_spin/0.1.0/sonic_spin/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4.4", default-features = false }
quote = "0.6.11"

[dependencies.syn]
version = "=0.15.30"
package = "syn-pub-items"
features = ["full", "derive", "parsing", "clone-impls", "printing"]

[features]
full = [] 
derive = []
parsing = []
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
printing = []
default = ["full", "derive", "parsing", "clone-impls", "printing"]

[package.metadata.docs.rs]
features = ["full", "derive", "parsing", "clone-impls", "printing"]
